--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -73,6 +73,25 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 
+		<!-- dubbo -->
+		<dependency>
+			<groupId>org.apache.dubbo</groupId>
+			<artifactId>dubbo-spring-boot-starter</artifactId>
+			<version>3.2.15</version>
+		</dependency>
+		<!-- dubbo naoms interface -->
+		<dependency>
+			<groupId>com.taocares</groupId>
+			<artifactId>naoms.service</artifactId>
+			<version>1.0.0.URC-SNAPSHOT</version>
+		</dependency>
+		<!-- nacos -->
+		<dependency>
+			<groupId>com.alibaba.nacos</groupId>
+			<artifactId>nacos-client</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
