--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### web
-server.port=8080
+server.port=8866
 server.servlet.context-path=/xxl-job-admin
 
 ### actuator
@@ -24,9 +24,9 @@ mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://192.16.3.185:3306/xxl_job_urc?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=root_pwd
+spring.datasource.password=Acdmdb20!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ### datasource-pool
@@ -64,3 +64,11 @@ xxl.job.triggerpool.slow.max=100
 
 ### xxl-job, log retention days
 xxl.job.logretentiondays=30
+
+# dubbo
+dubbo.application.name=xxl_job
+dubbo.application.serialize-check-status=DISABLE
+dubbo.application.check-serializable=false
+dubbo.protocol.name=dubbo
+dubbo.registry.address=nacos://nacos:AcdmNacos@192.16.3.153:8848,192.16.3.142:8848,192.16.3.141:8848?namespace=urc-dubbo
+dubbo.registry.group=URC
